<resources>
    <string name="app_name">SynchronyProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="jeffrey_choate">Jeffrey Choate</string>

    <string name="kaman">IT Client Services, Kaman Corporation</string>
    <string name="designprof">Land Surveying Tehcnician, Design Professionals, Inc.</string>
    <string name="SDP"> UConn Senior Design Project, Synchrony</string>
    <string name="SDP_desc">Designed and built an Android based prototype using NFC to initiate transactions. The application takes advantage of tools like Firebase and Retrofit to achieve this.</string>
    <string name="DP_desc"> Surveyed properties and provided data to clients and Civil Engineers, as well as direct interaction with clients to assess and implement project plans.</string>
    <string name="kaman_desc">Provided support and solutions for employee\'s IT hardware and software issues, and developed communication skills by working with people from all positions within the company.</string>

    <string name="languages">Java, Kotlin, Python, C, C++, Scheme, and SML</string>
    <string name="lang_desc">I first learned Java in high school, so it is generally my preferred language, which made learning Kotlin much easier. I have a lot of experience in Python from classes at UConn, and have used C for multithreading, pipes, and sockets. I\'m currently learning C++ and SML in classes as well.</string>

    <string name="experiences">Experience:</string>
    <string name="lang_title">Languages:</string>
    <string name="building_pcs">Building PCs:</string>
    <string name="country_title">Select a country:</string>
    <string name="default_country">default country</string>
    <string name="title_activity_country_display">CountryDisplay</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textview">TextView</string>
    <string name="countries">Countries</string>


</resources>