<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="6dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:scrollbars="vertical"   >

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:srcCompat="@drawable/img_1938" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/jeffrey_choate"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/experiences" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/kaman"    />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/kaman_desc"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/designprof"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:paddingTop="10dp"   />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DP_desc"
            android:textSize="13sp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SDP"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingTop="10dp"   />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SDP_desc"
            android:textSize="13sp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/lang_title"
            android:textColor="@color/black"    />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languages" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_desc"
            android:textSize="13sp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/building_pcs"
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:textColor="@color/black"    />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:srcCompat="@drawable/pc"
            android:paddingBottom="50dp"    />





        




    </LinearLayout>
</ScrollView>